# mktxp

./: .dockerignore  .gitignore  Dockerfile  Grafana_Dashboard.json  LICENSE  README.md  installed-3.3.1.tgz  main.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-and-push.yaml  tests.yaml
deploy/: routeros_api_ipv6_patch.diff
deploy/kubernetes/: deployment.yaml  secret.yaml
docker/: Dockerfile  docker-compose.yml
mktxp/: _mktxp.conf  basep.py  collectors_handler.py  metrics_handler.py  mktxp.conf  router_connection.py  router_entries_handler.py  router_entry.py  router_metric.py  web_handler.py
mktxp/cli/: dispatch.py  options.py
mktxp/collector/: address_list_collector.py  bandwidth_collector.py  base_collector.py  bfd_collector.py  bgp_collector.py  bridge_vlan_collector.py  capsman_collector.py  certificate_collector.py  connection_collector.py  container_collector.py  dhcp_collector.py  dns_collector.py  eoip_collector.py  firewall_collector.py  gre_collector.py  health_collector.py  identity_collector.py  interface_collector.py  ipip_collector.py  ipsec_collector.py  ipv6_neighbor_collector.py  kid_control_device_collector.py  lte_collector.py  mktxp_collector.py  monitor_collector.py  neighbor_collector.py  netwatch_collector.py  package_collector.py  poe_collector.py  pool_collector.py  public_ip_collector.py  queue_collector.py  resource_collector.py  route_collector.py  routerboard_collector.py  routing_stats_collector.py  switch_collector.py  user_collector.py  w60g_collector.py  wireguard_collector.py  (+1 more)
mktxp/collectors/: bandwidth_collector.py  base_collector.py  (+12 more)
tests/: __init__.py
web-ui/: index.html  script.js  styles.css
(+104 files in other folders)
